Link to "srfi.css".

--- a/srfi-128.html
+++ b/srfi-128.html
@@ -2,6 +2,7 @@
 <!-- saved from url=(0043)http://srfi.schemers.org/srfi-template.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>SRFI 128: Comparators (reduced)</title>
+    <link rel="stylesheet" href="http://srfi.schemers.org/srfi.css" type="text/css" />
   <style>#content > #right > .dose > .dosesingle,
 #content > #center > .dose > .dosesingle
 {display:none !important;}</style></head>
