--- a/srfi-128.html
+++ b/srfi-128.html
@@ -17,6 +17,15 @@ Comparators (reduced)
 
 John Cowan
 
+<h1>Status</h1>
+
+<p>This SRFI is currently in <em>draft</em> status. Here is <a href="http://srfi.schemers.org/srfi-process.html">an explanation</a> of each status that a SRFI can hold.  To provide input on this SRFI, please send email to <code><a href="mailto:srfi minus 128 at srfi dotschemers dot org">srfi-128@<span class="antispam">nospam</span>srfi.schemers.org</a></code>.  To subscribe to the list, follow <a href="http://srfi.schemers.org/srfi-list-subscribe.html">these instructions</a>.  You can access previous messages via the mailing list <a href="http://srfi-email.schemers.org/srfi-128">archive</a>.</p>
+<ul>
+  <li>Received: 2015/10/26</li>
+  <li>60-day deadline: 2015/12/25</li>
+  <li>Draft #1 published: 2015/10/26</li>
+</ul>
+
 <h1>Abstract</h1>
 
 <p>
