Fix my middle initial.

--- a/srfi-128.html
+++ b/srfi-128.html
@@ -320,4 +320,4 @@ FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
 DEALINGS IN THE SOFTWARE.
 
     </p><hr>
-    <address>Editor: <a href="mailto:srfi-editors at srfi dot schemers dot org">Arthur C. Gleckler</a></address></body></html>
+    <address>Editor: <a href="mailto:srfi-editors at srfi dot schemers dot org">Arthur A. Gleckler</a></address></body></html>
