Publish second draft.

--- a/srfi-128.html
+++ b/srfi-128.html
@@ -24,6 +24,7 @@ John Cowan
   <li>Received: 2015/10/26</li>
   <li>60-day deadline: 2015/12/25</li>
   <li>Draft #1 published: 2015/10/26</li>
+  <li>Draft #2 published: 2015/10/26</li>
 </ul>
 
 <h1>Abstract</h1>
