Publish third draft.

--- a/srfi-128.html
+++ b/srfi-128.html
@@ -18,6 +18,7 @@ John Cowan
   <li>60-day deadline: 2015/12/25</li>
   <li>Draft #1 published: 2015/10/26</li>
   <li>Draft #2 published: 2015/10/26</li>
+  <li>Draft #3 published: 2015/10/29</li>
 </ul>
 
 <h1>Abstract</h1>
