Add style sheet and title back.

--- a/srfi-128.html
+++ b/srfi-128.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body>
+<html>
+  <head>
+    <title>SRFI 128: Comparators (reduced)</title>
+    <link rel="stylesheet" href="http://srfi.schemers.org/srfi.css" type="text/css" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"></head><body>
   <div>
 
 <h1>Title</h1>
