--- a/srfi-128.html
+++ b/srfi-128.html
@@ -24,6 +24,7 @@ John Cowan
   <li>Draft #2 published: 2015/10/26</li>
   <li>Draft #3 published: 2015/10/29</li>
   <li>Draft #4 published: 2015/11/2</li>
+  <li>Draft #5 published: 2015/11/8</li>
 </ul>
 
 <h1>Abstract</h1>
